--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@
   --card-foreground: oklch(0.9851 0 0);
   --popover: oklch(0.1408 0.0044 285.8229);
   --popover-foreground: oklch(0.9851 0 0);
-  --primary: oklch(0.56 0.2418 265.2275);
+  --primary: oklch(0.4479 0.2935 266.23);
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.2739 0.0055 286.0326);
   --secondary-foreground: oklch(0.9851 0 0);
@@ -142,6 +142,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-button-primary: oklch(0.56 0.2418 265.23);
+  --color-texts-primary: oklch(0.5461 0.2152 262.88);
+  --color-bg-auth-primary: oklch(0.9755 0.0045 258.32);
 
   --font-sans: var(--font-sans);
   --font-mono: var(--font-mono);
